--- a/skillball.html
+++ b/skillball.html
@@ -167,9 +167,9 @@
 
         /* Slick Slider */
         .slider-container {
-            width: 85%;
+            width: 60%;
             max-width: 800px;
-            height: 100%;
+            height: auto;
             aspect-ratio: 16 / 9;
             /* 모바일 뷰라면 적당한 값으로 */
             margin: 0 auto;
@@ -214,6 +214,40 @@
             color: white !important;
             mix-blend-mode: difference !important;
         }
+
+        /* 풀스크린 이미지 부모 컨테이너 (기본적으로 숨김) */
+        /* 기존 CSS 그대로 사용 */
+        .fullscreen-image {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 10000;
+            display: none;
+        }
+
+        .fullscreen-overlay {
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.8);
+            backdrop-filter: blur(10px) !important;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .fullscreen-overlay::before {
+            content: "";
+            width: 100%;
+            display: flex !important;
+            max-width: 1280px;
+            aspect-ratio: 16 / 9;
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            background-image: var(--bg-img);
+        }
     </style>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <link rel="stylesheet" type="text/css"
@@ -223,6 +257,11 @@
 </head>
 
 <body oncontextmenu="return false" ondragstart="return false" onselectstart="return false">
+    <!-- 풀페이지 -->
+    <div class="fullscreen-image">
+        <div class="fullscreen-overlay" alt='슬라이드 확대이미지'></div>
+    </div>
+
     <!-- color4Bg -->
     <div id="bg-box" data-pixelate="true"></div>
 
@@ -237,29 +276,19 @@
                 CSS</p>
             <div class="inner-content">
                 <div class='title-line'></div>
-                <!-- <div class="slider-container"> -->
-                <!-- slick slider -->
-                <!--<div class="slider">
-                        <div class="slide-item" style="background-image: url(./src/img/portfolio/wing/wing1.jpg)"></div>
-                        <div class="slide-item" style="background-image: url(./src/img/portfolio/wing/wing2.jpg)"></div>
-                        <div class="slide-item" style="background-image: url(./src/img/portfolio/wing/wing3.jpg)"></div>
-                        <div class="slide-item" style="background-image: url(./src/img/portfolio/wing/wing4.jpg)"></div>
-                        <div class="slide-item" style="background-image: url(./src/img/portfolio/wing/wing5.jpg)"></div>
-                        <div class="slide-item" style="background-image: url(./src/img/portfolio/wing/wing6.jpg)"></div>
-                        <div class="slide-item" style="background-image: url(./src/img/portfolio/wing/wing7.jpg)"></div>
-                        <div class="slide-item" style="background-image: url(./src/img/portfolio/wing/wing8.jpg)"></div>
-                        <div class="slide-item" style="background-image: url(./src/img/portfolio/wing/wing9.jpg)"></div>
-                        <div class="slide-item" style="background-image: url(./src/img/portfolio/wing/wing10.jpg)">
-                        </div>
-                    </div>
-                </div> -->
                 <p class='skill-summary'>
                     영진직업전문학교에서 진행한 프론트엔드 과정을
-                    수료하였으며, 이후 퍼블리셔로 취업하여
-                    실무 경험을 부단히 길러왔습니다.
+                    수료하며 HTML5, CSS3를 이용한 퍼블리싱의 기초를 다졌습니다.
+                    <br><br>
+                    이후 (주)웨스트윙에 전담 퍼블리셔로 취업하여
+                    한 달 기준 약 3개 정도의 랜딩페이지를 제작하고
+                    자사몰 홈페이지를 개선하며
+                    실무 역량을 강화했습니다.
+                    <br><br>
+                    Tailwind CSS를 사용해 본 경험이 있습니다.
                 </p>
                 <p class='skill-comment'>
-                    Use : VScode, 카페24
+                    Use : VScode, Github, 카페24
                 </p>
             </div>
         </div>
@@ -270,27 +299,36 @@
             <div class="inner-content">
                 <div class='title-line'></div>
                 <p class='skill-summary'>
-                    영진직업전문학교에서 진행한 프론트엔드 과정을
+                    영진직업전문학교에서 진행한 KDT 프론트엔드 과정을
                     수료하였으며, 웹 퍼블리싱 시 필요한 함수를
-                    직접 작성할 수 있습니다.
+                    직접 작성하여 동적 효과를 구현하거나, CSS만으로는
+                    해결하기 어려운 문제를 극복할 수 있습니다.
+                    <br><br>
+                    또한 필요 시 jQuery를 포함한 JavaScript 기반 라이브러리를
+                    적극적으로 활용하여 작업 효율을 높일 수 있습니다.
                 </p>
                 <p class='skill-comment'>
-                    Use : VScode, 카페24
+                    Use : VScode, Github, 카페24
                 </p>
             </div>
         </div>
-        <!-- (3) React -->
+        <!-- (3) React, Vue.js -->
         <div class="ball coding-skill"
             style="--gradient-angle: 180deg; --ball-gradient: linear-gradient(180deg, rgba(255,0,94,1), rgba(255,0,94,0));">
-            <p class='skill-name'>React</p>
+            <p class='skill-name'>React<br>Vue.js</p>
             <div class="inner-content">
                 <div class='title-line'></div>
                 <p class='skill-summary'>
-                    영진직업전문학교에서 진행한 프론트엔드 과정을
-                    수료하였으며, React를 이용한 웹 퍼블리싱이
-                    가능하고 간단한 API를 연결할 수 있습니다.
+                    영진직업전문학교에서 진행한 KDT 프론트엔드 과정을
+                    수료하였으며, React 혹은 Vue.js를 이용한 웹 퍼블리싱이
+                    가능합니다.
+                    <br><br>
+                    Google, Kakao, Unsplash 등 기업에서 제공중인 API를 연동해 본 경험이 있습니다.
                 </p>
-                <p class='skill-comment'>Use : Unreal5</p>
+                <p class='skill-comment'>
+                    Use : VScode, Github
+                </p>
+
             </div>
         </div>
         <!-- (4) BluePrint -->
@@ -301,12 +339,10 @@
                 <div class='title-line'></div>
                 <p class='skill-summary'>
                     SBS게임아카데미에서 진행한 레벨 디자이너 과정을
-                    이수하였으며, Blueprint를 이용해 게임 속
+                    이수하였으며, Blueprint를 이용해 게임 내 전투나 각종
                     동작을 구현하는 기초를 다졌습니다.
                 </p>
-                <p class='skill-comment'>
-                    Use : VScode, 카페24
-                </p>
+                <p class='skill-comment'>Use : Unreal Engine5</p>
             </div>
         </div>
 
@@ -319,9 +355,10 @@
             <div class="inner-content">
                 <div class='title-line'></div>
                 <p class='skill-summary'>
-                    UI/UX 툴을 이용하여 설득력 있고 유저 친화적인
+                    기능 명세서를 기반으로 워크 플로우, 와이어 프레임을 직접 작성하거나 전달받아
+                    UI/UX 디자인 툴을 이용하여 설득력 있고 유저 친화적인
                     와이어 프레임 및 프로토타입을 제작할 수 있습니다.</p>
-                <p class='skill-comment'>Use : Adobe XD(80%), Figma(60%)</p>
+                <p class='skill-comment'>Use : Adobe XD, Figma</p>
             </div>
         </div>
         <!-- (2) 프로모션 디자인 -->
@@ -332,23 +369,25 @@
             <div class="inner-content">
                 <div class='title-line'></div>
                 <p class='skill-summary'>
-                    SNS 컨텐츠, 상세페이지, 대표이미지 등
-                    각종 프로모션에 필요한 이미지를
-                    디자인 및 편집할 수 있습니다.</p>
-                <p class='skill-comment'></p>
+                    SNS 콘텐츠, 알림톡 첨부 이미지, 상품 상세페이지, e-커머스 대표이미지 등
+                    다양한 프로모션 이미지를 제작한 실무 경험이 있습니다.
+                    <br><br>
+                    또한, 지역에서 진행된 KBO 프로야구 경기 마다 경기장 전광판에 노출되는
+                    자사 홍보물, 상품 프로모션 이미지, 이닝 간 이벤트용 이미지를 제작한 경험이 있습니다.
+                </p>
+                <p class='skill-comment'>Use : Adobe Photoshop, Adobe Illustrator, etc…</p>
             </div>
         </div>
         <!-- (3) 이미지 편집 -->
         <div class="ball design-skill"
             style="--gradient-angle: 80deg; --ball-gradient: linear-gradient(80deg, rgba(220,255,0,1), rgba(220,255,0,0));">
-            <p class='skill-name'>이미지<br>
-                편집</p>
+            <p class='skill-name'>그래픽 가공</p>
             <div class="inner-content">
                 <div class='title-line'></div>
                 <p class='skill-summary'>
-                    상품 및 컨텐츠 소재를 직접 촬영하고
-                    누끼, 보정 등 편집 작업을 능숙히 할 수 있습니다.</p>
-                <p class='skill-comment'>Use : Adobe Photoshop(80%), etc…</p>
+                    상품 혹은 콘텐츠 소재를 직접 촬영하거나
+                    누끼, 보정 등 후가공 작업을 능숙히 할 수 있습니다.</p>
+                <p class='skill-comment'>Use : Adobe Photoshop, etc…</p>
             </div>
         </div>
         <!-- (4) 드로잉 -->
@@ -358,11 +397,13 @@
             <div class="inner-content">
                 <div class='title-line'></div>
                 <p class='skill-summary'>
-                    어릴 때부터 고등학생 때까지 미술을 공부했으며
-                    예술고등학교 애니메이션과를 졸업했습니다.<br>
-                    각종 일러스트 제작, 스토리보드 작성 등
-                    자유로운 드로잉이 가능합니다.</p>
-                <p class='skill-comment'>Use : Hand(90%), Digital(70%)</p>
+                    어릴 적부터 고등학생 때까지 미술을 공부했으며
+                    예술고등학교 애니메이션 전공으로 졸업했습니다.
+                    <br><br>
+                    일러스트 소스는 물론 스토리보드를 드로잉으로 작성하여 직관적인 시각 자료를 제작하는 등
+                    자유로운 작업 가능합니다.
+                </p>
+                <p class='skill-comment'>Use : Adobe Photoshop, Clip Studio Paint, Infinite Painter, Hand drawing</p>
             </div>
         </div>
 
@@ -376,10 +417,12 @@
                 <div class='title-line'></div>
                 <p class='skill-summary'>
                     보고서, 제안서, 기획서 등
-                    다양한 양식을 필요에 따라 제작 가능하며
-                    지속적인 버전 관리 및 데이터 추출이 가능합니다.</p>
-                <p class='skill-comment'>Use : Google SpreadSheet(70%),
-                    PowerPoint(70%), Excel(50%)</p>
+                    필요에 따라 다양한 양식을 가독성있게 제작할 수 있으며
+                    지속적인 버전 관리 및 데이터 추출이 가능합니다.
+                    <br><br>
+                    수식을 이용한 문서간 데이터 공유로 작성 효율을 높일 수 있습니다.
+                </p>
+                <p class='skill-comment'>Use : PowerPoint, Google SpreadSheet, Excel</p>
             </div>
         </div>
         <!-- (2) 공예 -->
@@ -389,10 +432,29 @@
             <div class="inner-content">
                 <div class='title-line'></div>
                 <p class='skill-summary'>
-                    화장품, 캔들, 조향, 화과자 등 다양한 수공예 수업을
-                    이수하여 민간 강사 자격증을 취득하였으며
-                    자격증 교육이 가능합니다.</p>
+                    캔들, 비누, 화장품, 조향, 화과자 등 각 협회에서 진행하는
+                    다양한 수공예 자격증 수업을 수료해 민간 강사 자격증을 취득하였으며
+                    창업반, 자격증 교육이 가능합니다.</p>
                 <p class='skill-comment'>Level : Intermediate(중수)</p>
+            </div>
+        </div>
+        <!-- (3) 서비스 기획 -->
+        <div class="ball other-skill"
+            style="--gradient-angle: 80deg; --ball-gradient: linear-gradient(80deg, rgba(221,221,221,1), rgba(221,221,221,0));">
+            <p class='skill-name'>서비스<br>
+                기획</p>
+            <div class="inner-content">
+                <div class='title-line'></div>
+                <p class='skill-summary'>
+                    KDT 프론트엔드 과정에서 모든 프로젝트의 기획에 주도적으로 참여하거나 전담하며 서비스 기획 역량을 키웠습니다.
+                    논리와 근거를 기반으로 사용자 경험을 설계할 수 있으며, 이를 위해 스토리보드, 워크플로우, 와이어프레임 등 시각적 자료를 포함한 기획서를 작성할 수 있습니다.
+                    또한, 비폭력 대화(NVC) 방식을 원칙으로 삼아 원활한 의견 조율과 협업을 이끌어낼 수 있습니다.
+                    <br><br>
+                    이후 (주)웨스트윙에 퍼블리셔로 입사해 자사몰 마케팅 기획을 전담하며, 신규 서비스 론칭 시 A/B 테스트를 주도하거나
+                    사용자 행동 데이터를 분석하여 인사이트를 도출하고, KPI, ROI가 포함된 성과 지표를 작성하는 등 비즈니스 감각 및 기획 실무 역량을 강화했습니다.
+                    <br><br>
+                    더불어, 게임 레벨디자이너 양성 과정에 참여하여 콘텐츠 및 시스템 기획 기초를 다졌습니다.
+                <p class='skill-comment'>Use : PowerPoint, Google SpreadSheet, Excel, Xmind, etc…</p>
             </div>
         </div>
         <!-- (3) 3D 프린팅 -->
@@ -809,6 +871,101 @@
                 }
             }
         });
+    </script>
+
+    <script>
+        $(function () {
+            var isDragging = false;
+            var scrollY = 0; // 현재 스크롤 위치 저장
+
+            // 슬릭 슬라이더 터치/마우스 시작 시 플래그 초기화
+            $(".slick-slider").on("mousedown touchstart", function () {
+                isDragging = false;
+            });
+
+            // 슬릭 슬라이더 터치/마우스 이동 시 플래그 설정
+            $(".slick-slider").on("mousemove touchmove", function () {
+                isDragging = true;
+            });
+
+            // 슬릭 슬라이더 초기 설정
+            $(".slider").slick({
+                lazyLoad: "ondemand",
+                infinite: true,
+                slidesToShow: 1,
+                slidesToScroll: 1,
+                arrows: true,
+                dots: true,
+                centerMode: false,
+                centerPadding: "0px",
+                prevArrow: `<button type="button" class="slick-prev" style="height:100%;display:flex;justify-content:center;align-items:center;width:7.5%;left:-35px">
+                  <svg width="6.206" height="10.412" viewBox="0 0 6.206 10.412">
+                    <path d="M28,2039.016l-5,4.5h0l5,4.5" transform="translate(-22.5 -2038.31)" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/>
+                  </svg>
+                </button>`,
+                nextArrow: `<button type="button" class="slick-next" style="height:100%;display:flex;justify-content:center;align-items:center;width:7.5%;right:-35px">
+                  <svg width="6.206" height="10.412" viewBox="0 0 6.206 10.412">
+                    <path d="M23,2039.016l5,4.5h0l-5,4.5" transform="translate(-22.294 -2038.31)" fill="none" stroke="#000" stroke-linecap="round" stroke-linejoin="round" stroke-width="1"/>
+                  </svg>
+                </button>`,
+                responsive: [{ breakpoint: 768, settings: { arrows: false } }],
+            });
+
+            // 🌟 스크롤 차단
+            function disableScroll() {
+                scrollY = window.scrollY || window.pageYOffset;
+                $("body").css({
+                    overflow: "hidden",
+                    position: "relative",
+                });
+                document.addEventListener("wheel", preventScroll, { passive: false });
+                document.addEventListener("touchmove", preventScroll, { passive: false });
+            }
+
+            // 🌟 스크롤 복원
+            function enableScroll() {
+                $("body").css({
+                    overflow: "",
+                    position: "",
+                });
+                window.scrollTo(0, scrollY);
+                document.removeEventListener("wheel", preventScroll);
+                document.removeEventListener("touchmove", preventScroll);
+            }
+
+            // 스크롤 차단 이벤트 기본 동작 막기
+            function preventScroll(e) {
+                e.preventDefault();
+            }
+
+            // 슬라이드 아이템 클릭 시 풀스크린 모드 진입
+            $(".slick-slider").on("click", ".slide-item", function (e) {
+                if (isDragging) {
+                    e.preventDefault();
+                    return;
+                }
+                e.preventDefault();
+                var $this = $(this),
+                    bgImg = $this.data("bg-img");  // data-bg-img 속성의 값을 읽어옴
+
+                $(".fullscreen-overlay")
+                    .css("display", "flex")
+                    .get(0)
+                    .style.setProperty("--bg-img", bgImg);
+
+                $(".fullscreen-image").fadeIn();
+
+                disableScroll();
+            });
+
+            // 풀스크린 닫기
+            $(".fullscreen-image").on("click", function () {
+                $(this).fadeOut(function () {
+                    enableScroll();
+                });
+            });
+        });
+
     </script>
 </body>
 
